# LAAI_Mod1

./: README.md
MiniZinc_env/: pyproject.toml
src/: Cakes.mzn  SumAndProduct.mzn  Travelling Salesman Problem.mzn  first_try.pl
