[tool.poetry]
name = "minizinc-env"
version = "0.1.0"
description = ""
authors = ["MarcelloCeresini <mceresini.97@gmail.com>"]
readme = "README.md"
packages = [{include = "minizinc_env"}]

[tool.poetry.dependencies]
python = "^3.11"
minizinc = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
